# wagon_fem

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: wagon_frame.csv
docs/: api.md  index.md  usage.md
docs/parametric_generator_v0_1_0/: 01_scope_and_assumptions.md  02_architecture.md  03_csv_contract.md  04_section_estimates.md  05_generation_rules.md  06_validation_plan.md  07_implementation_tasks.md  08_body_scheme_illustration.md  09_confidence_hardening.md  README.md  VERSION.md  params.open_wagon.example.yaml
docs/parametric_generator_v0_2_0/: 01_scope_and_modeling_assumptions.md  02_passenger_body_beam_scheme.md  03_parameter_contract.md  04_generation_rules.md  05_double_deck_reference_notes.md  06_validation_and_implementation_tasks.md  07_body_scheme_illustration.md  08_single_deck_krv11_alignment.md  IMPLEMENTATION_PLAN.md  README.md  VERSION.md  params.passenger_double_deck.example.yaml  params.passenger_single_deck.example.yaml
docs/parametric_generator_v0_3_0/: 01_scope_and_assumptions.md  02_tank_car_beam_scheme.md  03_parameter_contract.md  04_generation_rules.md  05_load_and_support_model.md  06_validation_plan.md  07_implementation_tasks.md  09_krv10_reference_notes.md  (+6 more)
examples/: covered_wagon.yaml  open_wagon.yaml
tests/: test_basic.py  test_beam.py  test_entrypoints.py  test_parametric_builder.py  test_parametric_cli.py  test_parametric_covered_wagon.py  test_parametric_export.py  test_parametric_fixtures.py  test_parametric_local_axes.py  test_parametric_open_wagon.py  test_parametric_passenger_double_deck.py  test_parametric_passenger_single_deck.py  test_parametric_passenger_solver.py  test_parametric_schemas.py  test_parametric_supports.py  test_parametric_tank_wagon.py  test_parametric_validation.py  test_service_layer.py  test_ui_model3d.py  test_ui_plotly.py
(+31 files in other folders)
