[project]
name = "wagon-fem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [ { name = "Your Name", email = "you@example.com" } ]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
keywords = ["fem", "wagon", "example"]
dependencies = []

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"pytest-cov",
	"black",
	"isort",
	"flake8",
	"pre-commit",
	"setuptools_scm",
]

[project.scripts]
wagon-fem = "wagon_fem.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers -q"
testpaths = ["tests"]
