[project]
name = "wagon-fem"
version = "0.1.0"
description = "Расчет моментов в балках конструкции вагона с использованием Pynite и Gradio"
authors = [ { name = "Yuri Bulavin" } ]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pynite>=0.0.29",
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pynitefea>=1.6.2",
]

[project.scripts]
wagon-fem-ui = "wagon_fem.ui_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wagon_fem"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "plotly>=5.0",
]
